5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1836_1276.log
== TEST (2019-06-30 05:37:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
for i in range (7):
   v [i] = sum(:,i)
print (v)
-- ERROR:
File "XXXX", line 7
    v [i] = sum(:,i)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:38:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
for i in range (7):
   v [i] = sum(m [:,i])
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:39:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
for i in range (7):
   v [i] = sum(m [:,i])
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:40:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
for i in range (7):
   v [i] = sum(m [:,i])
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:46:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
h = 0
for i in range (7):
   v [i] = sum(m [:,i])
for x in range (7):
   if (x == max (v)):
      print (i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:48:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7)
h = 0
for i in range (7):
   v [i] = sum(m [:,i])
print (v)
for x in range (7):
   if (x == max (v)):
      print (i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:49:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7,dtype=int)
h = 0
for i in range (7):
   v [i] = sum(m [:,i])
for x in range (7):
   if (x == max (v)):
      print (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:51:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7,dtype=int)
h = 0
for i in range (7):
   v [i] = sum(m [:,i])
print (max (v))
for x in range (7):
   if (x == max (v)):
      print (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:52:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7,dtype=int)
h = 0
for i in range (7):
   v [i] = sum(m [:,i])
print (max (v))
for x in range (7):
   if (x == max (v)):
      print (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 05:55:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7,dtype=int)
for i in range (7):
   v [i] = sum(m [:,i])
print (max (v))
for x in range (7):
   if (v [x] == max (v)):
      print (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 05:57:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array(eval(input ("insira: ")))
v = zeros (7,dtype=int)
for i in range (7):
   v [i] = sum(m [:,i])
for x in range (7):
   if (v [x] == max (v)):
      print (x + 1)
-- EXECUTION TIME:
1.02618
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
